Fixed nav bar on mobile

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,27 +1,25 @@
 nav {
-  background: rgba(0, 0, 0, 0.3);
-  width: max-content;
-  display: block;
-  padding: 0.5rem 1rem;
-  z-index: 20;
-  position: fixed;
-  left: 50%;
-  right: 50%;
-  transform: translateX(-50%);
-  bottom: 2rem;
+  z-index: 100;
   display: flex;
-  gap: 0.8rem;
+  position: fixed;
+  bottom: 2rem;
+  width: auto;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
   border-radius: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
   backdrop-filter: blur(15px);
+  background: rgba(0, 0, 0, 0.3);
 }
 
 nav a {
-  background: transparent;
+  display: flex;
   padding: 0.5rem;
   border-radius: 50%;
-  display: flex;
-  color: var(--container-color);
   font-size: 1.5rem;
+  background: transparent;
+  color: var(--container-color);
 }
 
 nav a:hover {
